@@ -5,18 +5,18 @@ package io.github.data4all.util;
 
 /**
  * Convert the geo data longitude and latitude from degree to an DMS string and
- * from a DMS string to degree
+ * from a DMS string to degree.
  * 
  * @author sbollen
  *
  */
-public abstract class GeoDataConverter {
+public class GeoDataConverter {
 
     // Constructor
-    public GeoDataConverter() {
+    private GeoDataConverter() {
     }
 
-    /*
+    /**
      * Convert the given latitude and longitude from degrees into DMS (degree
      * minute second) format. For example -79.948862 becomes
      * 79/1,56/1,55903/1000
@@ -26,16 +26,15 @@ public abstract class GeoDataConverter {
      * @return the given latitude or longitude in DMS
      */
     public static String convertToDMS(double deg) {
-        StringBuilder sb = new StringBuilder(20);
         deg = Math.abs(deg);
-        int degree = (int) deg;
+        final int degree = (int) deg;
         deg *= 60;
         deg -= (degree * 60.0d);
-        int minute = (int) deg;
+        final int minute = (int) deg;
         deg *= 60;
         deg -= (minute * 60.0d);
-        int second = (int) (deg * 1000.0d);
-
+        final int second = (int) (deg * 1000.0d);
+        StringBuilder sb = new StringBuilder(20);
         sb.setLength(0);
         sb.append(degree);
         sb.append("/1,");
@@ -46,7 +45,7 @@ public abstract class GeoDataConverter {
         return sb.toString();
     }
 
-    /*
+    /**
      * Convert the latitude or latitude from DMS into degrees
      * 
      * @param stringDMS the given latitude or longitude in DMS
@@ -55,25 +54,25 @@ public abstract class GeoDataConverter {
      */
     public static Double convertToDegree(String stringDMS) {
         Double result = null;
-        String[] DMS = stringDMS.split(",", 3);
+        final String[] dms = stringDMS.split(",", 3);
 
         // Get the degree value
-        String[] stringD = DMS[0].split("/", 2);
-        Double D0 = new Double(stringD[0]);
-        Double D1 = new Double(stringD[1]);
-        Double FloatD = D0 / D1;
+        final String[] stringD = dms[0].split("/", 2);
+        final Double d0 = Double.valueOf(stringD[0]);
+        final Double d1 = Double.valueOf(stringD[1]);
+        final Double floatD = d0 / d1;
         // Get the minute value
-        String[] stringM = DMS[1].split("/", 2);
-        Double M0 = new Double(stringM[0]);
-        Double M1 = new Double(stringM[1]);
-        Double FloatM = M0 / M1;
+        final String[] stringM = dms[1].split("/", 2);
+        final Double m0 = Double.valueOf(stringM[0]);
+        final Double m1 = Double.valueOf(stringM[1]);
+        final Double floatM = m0 / m1;
         // Get the second value
-        String[] stringS = DMS[2].split("/", 2);
-        Double S0 = new Double(stringS[0]);
-        Double S1 = new Double(stringS[1].substring(0, stringS[1].length()));
-        Double FloatS = S0 / S1;
+        final String[] stringS = dms[2].split("/", 2);
+        final Double s0 = Double.valueOf(stringS[0]);
+        final Double s1 = Double.valueOf(stringS[1].substring(0, stringS[1].length()));
+        final Double floatS = s0 / s1;
 
-        result = new Double(FloatD + (FloatM / 60) + (FloatS / 3600));
+        result = Double.valueOf(floatD + (floatM / 60) + (floatS / 3600));
 
         return result;
     }
